tests/baselines/reference/indexerSignatureWithRestParam.errors.txt
indexerSignatureWithRestParam.ts(2,6): error TS1017: An index signature cannot have a rest parameter.
indexerSignatureWithRestParam.ts(6,6): error TS1017: An index signature cannot have a rest parameter.


==== indexerSignatureWithRestParam.ts (2 errors) ====
    interface I {
        [...x]: string;
         ~~~
!!! error TS1017: An index signature cannot have a rest parameter.
    }
    
    class C {
        [...x]: string
         ~~~
!!! error TS1017: An index signature cannot have a rest parameter.
    }